force-app/main/default/objects/Categorys__x/Categorys__x.object-meta.xml
<CustomObject>
    <description>Categorys</description>
    <externalDataSource>OrderDB</externalDataSource>
    <externalName>Categorys</externalName>
    <label>Categorys</label>
    <pluralLabel>Categorys</pluralLabel>
</CustomObject>