force-app/main/default/objects/Categorys__x/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Categorys</relationshipLabel>
    <relationshipName>Categorys</relationshipName>
    <type>Lookup</type>
</CustomField>