force-app/main/default/objects/Categorys__x/fields/categoryID__c.field-meta.xml
<CustomField>
    <fullName>categoryID__c</fullName>
    <description>categoryID</description>
    <externalDeveloperName>categoryID</externalDeveloperName>
    <label>categoryID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>