force-app/main/default/objects/Categorys__x/fields/categoryName__c.field-meta.xml
<CustomField>
    <fullName>categoryName__c</fullName>
    <description>categoryName</description>
    <externalDeveloperName>categoryName</externalDeveloperName>
    <label>categoryName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>